Kubernetecs/Kind/Endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: my-endpoint
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 80
